objects/ASI_CRM_PayeeVAT__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payee &amp; VAT</relationshipLabel>
        <relationshipName>Payee_VAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payee_Name__c</fullName>
        <label>Payee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payee_VAT_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Payee &amp; VAT EXID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VAT_No__c</fullName>
        <label>VAT No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Payee &amp; VAT</label>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Payee &amp; VAT Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee &amp; VAT</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Payee_VAT</fullName>
        <active>true</active>
        <label>ASI_TH_CRM_Payee&amp;VAT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>